# ph-bck-rem-exp-proj

./: .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml  tasks.py
app/: Dockerfile  __init__.py  config.py  constants.py  dependencies.py  lifespan.py  main.py
app/clients/: __init__.py  photoroom.py  redacted_service.py
app/helpers/: image.py
app/models/: background_remover.py
app/routers/: background_remover.py  background_remover_parallel.py
tests/: __init__.py  test_placeholder.py
tests/app/: __init__.py  conftest.py
tests/app/clients/: __init__.py  test_photoroom.py  test_redacted_service.py
tests/app/helpers/: __init__.py  test_image.py
tests/app/models/: __init__.py  test_background_remover.py
tests/app/routers/: __init__.py  conftest.py  test_background_remover.py  test_background_remover_parallel.py
workflows/: Dockerfile  Dockerfile.flows  Dockerfile.worker  README.md  constants.py  healthcheck.sh  worker_entrypoint.sh
workflows/clients/: minio.py  photoroom.py  redacted_service.py
workflows/flows/: background_remover.py  deploy.py
